--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
 	},
 	"devDependencies": {
 		"gh-pages": "^6.3.0"
-	}
+	},
+	"homepage": "https://Victoriia-Melnyk.github.io/blood_device_land_portfolio"
 }
